<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityCiudad"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtMensajeB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtMensajeB"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnIntibuca"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIntibuca"
        android:textColor="#578127" />

    <Button
        android:id="@+id/btnLaEza"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLaEza"
        android:textColor="#578127" />

    <Button
        android:id="@+id/btnCamasca"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCamasca"
        android:textColor="#578127" />
</LinearLayout>